--- a/build.gradle
+++ b/build.gradle
@@ -28,4 +28,6 @@ dependencies {
 	runtime('mysql:mysql-connector-java')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	compile group: 'redis.clients', name: 'jedis', version: '2.9.0'
+	compile ('org.springframework.boot:spring-boot-starter-aop')
+
 }
