--- a/build.gradle
+++ b/build.gradle
@@ -29,5 +29,9 @@ dependencies {
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	compile group: 'redis.clients', name: 'jedis', version: '2.9.0'
 	compile ('org.springframework.boot:spring-boot-starter-aop')
+//	testCompile group: 'com.github.stefanbirkner', name: 'system-rules', version: '1.16.0'
+	testCompile group: 'org.hamcrest', name: 'hamcrest-core', version: '1.3'
+	testCompile group: 'org.hamcrest', name: 'hamcrest-library', version: '1.3'
+	testCompile group: 'junit', name: 'junit', version: '4.11'
 
 }
